# baru

./: .gitignore  Cargo.toml  README.md  bar.yaml  baru.yaml  build.rs
.github/workflows/: baru.yml  deploy.yml  test.yml
.pkg/aur/: PKGBUILD  update.sh
lib/audio/: CMakeLists.txt
lib/audio/include/: audio.h
lib/audio/src/: audio.c
lib/netlink/: CMakeLists.txt
lib/netlink/include/: netlink.h
lib/netlink/src/: common.c  wired.c  wireless.c
libnl_data/: CMakeLists.txt
libnl_data/include/: nl_data.h
libnl_data/src/: common.c  wired.c  wireless.c
libsound/: CMakeLists.txt
libsound/include/: sound.h
libsound/src/: sound.c
src/: battery.rs  brightness.rs  cli.rs  cpu.rs  cpu_freq.rs  date_time.rs  error.rs  http.rs  lib.rs  main.rs  memory.rs  mic.rs  module.rs  netlink.rs  new_pulse.rs  nl_data.rs  pulse.rs  signal.rs  sound.rs  temperature.rs  trace.rs  util.rs  wired.rs  wireless.rs
src/modules/: battery.rs  brightness.rs  cpu.rs  cpu_freq.rs  cpu_usage.rs  date_time.rs  memory.rs  mic.rs  mod.rs  sound.rs  temperature.rs  weather.rs  wired.rs  wireless.rs
