[package]
name = "baru"
version = "0.4.0"
authors = ["pierre <dommerc.pierre@gmail.com>"]
edition = "2021"
links = "netlink,audio"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3.1", features = [
    "tracing-log",
    "env-filter",
] }
tracing-appender = "0.2"
once_cell = "1.19.0"
chrono = "0.4"
regex = "1"

[build-dependencies]
cmake = "0.1"

[profile.release]
codegen-units = 1
strip = true
opt-level = "s"
lto = true
